src/views/styles/global.css
@import "tailwindcss";
@import "./typeset.css";
@import "tw-animate-css";
@import "shadcn/tailwind.css";

@font-face {
  font-family: 'Cal Sans UI';
  font-style: normal;
  font-display: swap;
  font-weight: 300 700;
  src: url('../../../public/fonts/cal-sans-ui-variable.woff2') format('woff2-variations');
}

@font-face {
  font-family: 'Cal Sans Display';
  font-style: normal;
  font-display: swap;
  font-weight: 500;
  src: url('../../../public/fonts/cal-sans-display-medium.woff2') format('woff2');
}

@font-face {
  font-family: 'Cal Sans Display';
  font-style: normal;
  font-display: swap;
  font-weight: 600;
  src: url('../../../public/fonts/cal-sans-display-semibold.woff2') format('woff2');
}

.typeset-docs {
  --typeset-font-body: var(--font-sans);
  --typeset-font-heading: var(--font-heading);
  --typeset-font-mono: var(--font-mono);
  --typeset-size: 15px;
  --typeset-leading: 1.6;
  --typeset-flow: 1em;
}

@custom-variant dark (&:is(.dark *));

@layer base {
  * {
    border-color: var(--border);
    @apply border-border outline-ring/50;
  }
  body {
    font-family: var(--font-sans);
    background-color: var(--background);
    color: var(--foreground);
    /* transition: background-color 420ms ease-in, color 420ms ease-in; */
    padding-top: 38px;
    -webkit-user-select: none;
    user-select: none;
    @apply bg-background text-foreground;
  }

  input,
  textarea,
  [contenteditable="true"] {
    -webkit-user-select: text;
    user-select: text;
  }

  body::before {
    content: "";
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    height: 38px;
    background: var(--background);
    -webkit-app-region: drag;
    -webkit-user-select: none;
    user-select: none;
    z-index: 2147483647;
  }
  html {
    font-family: var(--font-sans);
    background-color: var(--background);
    color: var(--foreground);
    /* transition: background-color 420ms ease-in, color 420ms ease-in; */
    @apply font-sans;
  }

  *, ::before, ::after {
    transition-property: background-color, border-color, color, fill, stroke;
    transition-duration: 420ms;
    /* transition-timing-function: ease-in; */
  }

  html.theme-changing *, html.theme-changing ::before, html.theme-changing ::after {
    transition-property: background-color, border-color, color, fill, stroke !important;
    transition-duration: 420ms !important;
    /* transition-timing-function: ease-in !important; */
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: var(--font-heading);
  }
}
/* ... */

